--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <title>Almortagel</title> 
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
-  <link rel="icon" href="4307b2bf-modified.png">
+  <link rel="icon" href="images/4307b2bf-modified.png">
 
   <meta data-n-head='ssr' data-hid='theme-color' name='theme-color' content='#BEBEAB'>
     <meta data-n-head='ssr' data-hid='og:type' name='og:type' content='website'>
     <meta data-n-head='ssr' data-hid='og:title' name='og:title' content='Asjad'>
-    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://asjadoooo.github.io/Personal-portfolio-website/'>
+    <meta data-n-head='ssr' data-hid='og:url' name='og:url' content='https://Almortage.github.io/Personal-portfolio-website/'>
     <meta data-n-head='ssr' data-hid='og:image' name='og:image'
         content='https://cdn.discordapp.com/attachments/826927977106374716/836647613927391302/Yellow-Anime-Girl-Pfp.png'>
     <meta data-n-head='ssr' data-hid='description' name='description'
@@ -23,18 +23,18 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="cloud.png" alt="cloud">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Almortagel.</h1>
       <h2>a <span class="pro">pro</span>grammer.</h2>
     </div>
-    <img class="bottom-cloud" src="cloud.png" alt="cloud">
-    <img class="mountain" src="mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img class="mountain" src="images/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="4307b2bf-modified.png" alt="profile image that's it">
+      <img src="images/4307b2bf-modified.png" alt="profile image that's it">
       <h2>Hello.</h2>
       <p class="intro">Haii, I'm an A-Level student what else i tell you about? i code in python lol and play some fucking games and listen to J COLE my idol<p>
     </div>
@@ -49,7 +49,7 @@
 
       </div>
       <div class="skill-row">
-        <img class="chilli-img" src="rickroll_4k-modified.png" alt="RICKROOL-img">
+        <img class="chilli-img" src="images/rickroll_4k-modified.png" alt="RICKROOL-img">
 
         <h3>What's my best skill</h3>
         <p>But my best skill is actually is doing nothing sitting down for hours and wasting i am really good at it anyone wanna mess?</p>
@@ -67,9 +67,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://github.com/AsjadOooO">Github</a>
-    <a class="footer-link" href="https://twitter.com/asjafn">Twitter</a>
-    <a class="footer-link" href="https://www.instagram.com/fnasjad/">Instagram</a>
+    <a class="footer-link" href="https://github.com/Almortage">Github</a>
+    <a class="footer-link" href="https://twitter.com/Almortagel">Twitter</a>
+    <a class="footer-link" href="https://www.instagram.com/Almortage/">Instagram</a>
     <p class="copyright">© 2021 copyright by Asjad</p>
   </div>
 </body>
